--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -12,6 +12,8 @@ pipeline:
       - python -m build --sdist --no-isolation
       - sha256sum dist/*
       - twine upload --non-interactive --skip-existing dist/*
+    secrets:
+      - TWINE_PASSWORD
     when:
       event: tag
       tag: v*
