Use `ayatana-appindicators` if available

--- a/meson.build
+++ b/meson.build
@@ -12,8 +12,13 @@ dependency('pygobject-3.0')
 dependency('dbus-python')
 dependency('gtk+-3.0')
 dependency('libnotify')
-dependency('appindicator3-0.1')
+ayatana_appindicator = dependency('ayatana-appindicator3-0.1', required: false)
+appindicator = dependency('appindicator3-0.1', required: false)
 dependency('libxfconf-0', required: false)
+
+if not (ayatana-appindicator.found() or appindicator.found())
+  error('At least on of these is required:', appindicator.name(), ayatana_appindicator.name())
+endif
 
 pymod = import('python')
 python = pymod.find_installation('python',
