Add compat for distros that still default python2
See: https://codeberg.org/WhyNotHugo/caffeine-ng/issues/118

--- a/meson.build
+++ b/meson.build
@@ -21,7 +21,7 @@ if not (ayatana_appindicator.found() or appindicator.found())
 endif
 
 pymod = import('python')
-python = pymod.find_installation('python',
+python = pymod.find_installation('python3',
   modules: ['xdg', 'click', 'ewmh', 'setproctitle', 'pulsectl']
 )
 python.dependency()
