Xdg autostart spec has no concept of a prefix
See: https://codeberg.org/WhyNotHugo/caffeine-ng/issues/118
See: https://specifications.freedesktop.org/autostart-spec/autostart-spec-latest.html

--- a/meson.build
+++ b/meson.build
@@ -93,7 +93,7 @@ configure_file(
 
 install_data(
   'share/applications/caffeine.desktop',
-  install_dir: join_paths(get_option('sysconfdir'), 'xdg/autostart'),
+  install_dir: '/etc/xdg/autostart',
 )
 
 install_data(
