Declare git as a build dependency
If git is absent, building would fail with an ugly error. With this
change, a clear error indicating that git is required will be shown.

Fixes: https://codeberg.org/WhyNotHugo/caffeine-ng/issues/122

--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,8 @@ python = pymod.find_installation('python3',
 )
 python.dependency()
 
+git = find_program('git', required: true)
+
 prefix = get_option('prefix')
 pkgdatadir = join_paths(prefix, get_option('datadir'))
 
@@ -56,7 +58,7 @@ version_py = configure_file(
     output: 'version.py',
     configuration: configuration_data({
       'VCS_TAG': run_command(
-        'git', 'describe', '--long', '--tags', '--dirty', '--always',
+        git, 'describe', '--long', '--tags', '--dirty', '--always',
         check: true
       ).stdout().strip()
     }),
